load("@rules_cc//cc:defs.bzl", "cc_library", "cc_binary")

cc_library(
  name = "ghostdb",
  srcs = glob(["src/*.cc"]),
  hdrs = glob(["include/*.h"]),
  linkopts = ["-pthread"],
  copts = [
    "-Iinclude",
    "-std=c++17",
    "-Wall",
    "-Werror",
    "-pedantic",
    "-Wconversion",
    "-Wformat",
    "-g3"
    ],
)

cc_binary(
  name = "testdb",
  srcs = ["test/test_db.cc"],
  linkopts = ["-pthread"],
  deps = [":ghostdb"],
  copts = [
    "-Iinclude",
    "-std=c++17",
    "-Wall",
    "-Werror",
    "-pedantic",
    "-Wconversion",
    "-Wformat",
    "-g3"
    ],
)

# compile option: bazel build --cxxopt="-std=c++17" --cxxopt="-g3" --cxxopt="-Werror" --cxxopt="-Wall" --cxxopt="-pedantic" --cxxopt="-Wconversion" --cxxopt="-Wformat" ghostdb