load("@rules_cc//cc:defs.bzl", "cc_library", "cc_binary")

cc_library(
  name = "ghostdb",
  srcs = glob(["src/*.cc"]),
  hdrs = glob(["include/*.h"]),
  linkopts = ["-pthread"],
  copts = [
    "-Iinclude",
    "-std=c++17",
    "-Wall",
    "-Werror",
    "-pedantic",
    "-Wconversion",
    "-Wformat",
    "-g3"
    ],
)

cc_binary(
  name = "testdb",
  srcs = ["test/test_db.cc"],
  linkopts = [
    "-pthread",
    "-L/usr/local/lib",
    "-lgtest",
    "-lgtest_main"
    ],
  deps = [":ghostdb"],
  copts = [
    "-Iinclude",
    "-I/usr/local/include",
    "-L/usr/local/lib",
    "-std=c++17",
    "-Wall",
    "-Werror",
    "-pedantic",
    "-Wconversion",
    "-Wformat",
    "-g3"
    ],
)
